# visualnav-transformer

./: .gitignore  package.xml  setup.cfg  setup.py  test_extended_nomad_vint.py  vGPU_driver_installer.sh
assets/: scaled_2x.npz  scaled_2x_1.npz  traj_metadata.json  upscale_data.py
conda_envs/: deployment_environment.yaml  goal_module.yml  train_environment.yaml
config/data/: data_config.yaml  data_config_goal_module.yaml  dino_cache.yaml  preprocess_config.yaml
config/deployment/: models.yaml  robot.yaml
config/goal_module/: config.yaml
config/train/: README.md  defaults.yaml  example_with_gmc_weights.yaml  prebuilt_dino.yaml  standard.yaml
dataset/: base_dataset.py  data_utils.py  feature_dataset.py  vint_dataset.py
dataset/gdrive/: gdrive_login.sh  gdrive_sync.py
dataset/legacy/: dataset_preprocess_scand.py  dino_cache_old.py
docker/: pyproject.toml
goal_module/: main_unsupervised.py
goal_module/data_modules/: class_dataset.py  goal_dataset.py  load_dataset.py
goal_module/dca/: schemes.py
goal_module/models/: encoders.py  gmc.py  gmc_networks.py
goal_module/training/: callbacks.py  dca_evaluation_trainer.py  mlflow_logger.py  model_trainer.py
goal_module/utils/: general_utils.py
scripts/: publish_cmd.py  visualize.py
visualnav_transformer/: __init__.py
visualnav_transformer/deployment/: create_topomap.py  explore.py  init_livekit.sh  livekit_bridge.py  navigate.py  topic_names.py  utils.py
visualnav_transformer/train/: dino_cache.py  estimate_fps.py  performance_utils.py  test_scand_dataset.py  train.py  verify_simple_cache.py  (+1 more)
(+65 files in other folders)
