<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visnav_transformer</name>
  <version>0.0.1</version>
  <description>Visual Navigation Transformer</description>
  <maintainer email="freundl0509@gmail.com">lacykaltgr</maintainer>
  <license>MIT license</license>
  <author>Freund László</author>
  
  <!--
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mission_planner_interfaces</depend>

   <depend>python3-cv-bridge</depend> 
  <depend>python3-numpy</depend>
  <depend>python3-pyproj</depend>
  <depend>python3-transforms3d</depend>-->

  <!-- <buildtool_depend>ament_python</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
